# sfml-cmake

./: .gitignore  CMakeLists.txt  Linux README  Linux README.txt  New repo checklist.txt  README.md
.github/workflows/: ci.yml
resources/: resources.txt
src/: MouseResponder.hpp  corestate.cpp  corestate.hpp  mainmenu.cpp  mainmenu.hpp  sfmlApp.cpp  sfmlApp.hpp  splash.cpp  splash.hpp  state.hpp
